# local-event-discovery-chatbot

./: .gitignore  Notes.txt  README.md  pyproject.toml
data/: agent_sessions.db  events.db
scripts/: chat_cli.py  clean_duplicates.py  clear_db.py  run_etl.py
src/: main.py
src/agents/: __init__.py  event_agent.py
src/api/: __init__.py  routes.py
src/database/: __init__.py  connection.py  models.py
src/etl/: __init__.py  event_scraper.py
