[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-recommender"
version = "0.1.0"
description = "A chatbot API for local event discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "agno>=0.1.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "openai>=1.109.1",
]

[project.scripts]
run-etl = "src.etl:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
